--- a/app2/src/Products.css
+++ b/app2/src/Products.css
@@ -1,12 +1,20 @@
 .products{
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .product{
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
+    padding-top: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
     padding-bottom: 1em;
+    justify-content: space-between;
+}
+
+.product:hover{
+    background: #efefef
 }
 
 .product .name{
@@ -16,4 +24,8 @@
 
 .product .desc{
     font-size: 10pt;
+}
+
+.product .actions .remove{
+    cursor: pointer;
 }
