--- a/app2/src/App.css
+++ b/app2/src/App.css
@@ -11,3 +11,10 @@
   justify-content: center;
   padding-top: 3em;
 }
+
+.add-product{
+  padding-top: 3em;
+  padding-bottom: 3em;
+  display: flex;
+  justify-content: center;
+}
