--- a/app3/src/App.css
+++ b/app3/src/App.css
@@ -12,8 +12,10 @@
   padding-top: 3em;
 }
 
+.filter-products,
 .add-product{
   padding-top: 3em;
   display: flex;
   justify-content: center;
 }
+
