kata 4 start code

--- a/app4/src/ProductMenu.css
+++ b/app4/src/ProductMenu.css
@@ -1,9 +1,12 @@
-.products{
+.product-menu{
     display: flex;
     flex-direction: column;
+    width: 40vw;
+    min-width: 10em;    
+    margin: 1em;
 }
 
-.product{
+.product-item{
     display: flex;
     flex-direction: row;
     padding-top: 1em;
@@ -11,24 +14,16 @@
     padding-right: 1em;
     padding-bottom: 1em;
     justify-content: space-between;
-    min-width: 40vw;
+    min-width: 10em;
 }
 
-.product:hover{
+.product-item:hover{
     background: #efefef
 }
 
-.product .name{
+.product-item .name{
     font-weight: bold;
     font-size: 14pt;
     display: flex;
     flex-direction: row;
-}
-
-.product .desc{
-    font-size: 10pt;
-}
-
-.product .actions .remove{
-    cursor: pointer;
 }
