skeleton of kata 5

--- a/app5/app/src/App.css
+++ b/app5/app/src/App.css
@@ -1,13 +1,14 @@
-.App {
-}
-
 .App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
+  text-align: center;
 }
 
-.App-intro {
-  font-size: large;
+.products-container{
+  display: flex;
+  justify-content: center;
+  padding-top: 3em;
 }
+
